--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
 version: '3'
+
 services:
   app:
     build:
@@ -7,13 +8,26 @@ services:
     volumes:
       - .:/var/www/html
     ports:
-      - '8002:80'
+      - '8002:8000' 
     depends_on:
       - db
+    environment:
+      - DB_HOST=db
+      - DB_PORT=3306
+      - DB_DATABASE=rotacao_pastagem
+      - DB_USERNAME=root
+      - DB_PASSWORD=root
+    entrypoint: ["sh", "/var/www/html/entrypoint.sh"]
 
   db:
-    image: 'mysql:5.7'
+    image: 'mysql:8.0'
     ports:
       - '3306:3306'
     environment:
       MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: rotacao_pastagem
+    volumes:
+      - db_data:/var/lib/mysql
+
+volumes:
+  db_data:
